--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 	<h1>HAS DHEMS QUIT WORK?</h1>
-	<p><a href="http://foaas.com/bag/DHemz">NO</a></p>
+	<p><a href="http://foaas.com/question/DHemz">NO</a></p>
 </body>
 </html>
